force-app/main/default/objects/Experian_Credit_Policy__c/Experian_Credit_Policy__c.object-meta.xml
<CustomObject>
    <label>Experian Credit Policy</label>
    <nameField>
        <label>Experian Credit Policies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Credit Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>