force-app/main/default/objects/Experian_Credit_Policy__c/fields/Experian_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Experian_Configuration__c</fullName>
    <label>Experian Configuration</label>
    <referenceTo>Experian_Configuration__c</referenceTo>
    <relationshipLabel>Experian Credit Policies</relationshipLabel>
    <relationshipName>Experian_Credit_Policies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>