force-app/main/default/objects/Experian_Credit_Policy__c/fields/Policy_Description__c.field-meta.xml
<CustomField>
    <fullName>Policy_Description__c</fullName>
    <label>Policy Description</label>
    <type>TextArea</type>
</CustomField>