force-app/main/default/objects/Experian_Credit_Policy__c/fields/Policy_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Policy_Identifier__c</fullName>
    <label>Policy Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>